--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,12 @@
   "extends": "eslint:recommended",
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "warning"
+    "prettier/prettier": "warning",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ]
   }
 }
