--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,42 @@
 {
   // GLOBAL
-  "semi": true,
 
-  // EMMET
-  "emmet.showSuggestionsAsSnippets": true,
+  "diffEditor.ignoreTrimWhitespace": true,
+
+  "explorer.compactFolders": false,
+  "explorer.confirmDragAndDrop": false,
+  "explorer.openEditors.visible": 0,
+
+  "editor.fontFamily": "Fira Code, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontLigatures": true,
+  "editor.fontSize": 13,
+  "editor.formatOnSave": true,
+  "editor.minimap.enabled": false,
+  "editor.snippetSuggestions": "top",
+  "editor.suggest.maxVisibleSuggestions": 10,
+  "editor.suggest.showWords": false,
+
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
+  "emmet.showSuggestionsAsSnippets": true,
 
-  // EDITOR
-  "editor.snippetSuggestions": "top",
+  "javascript.updateImportsOnFileMove.enabled": "always",
+
+  "prettier.configPath": ".prettierrc.json",
+  "prettier.requireConfig": true,
+
+  "semi": true,
+
+  "window.zoomLevel": 1,
+
+  "workbench.activityBar.visible": true,
+  "workbench.iconTheme": "vscode-icons",
+  "workbench.sideBar.location": "right",
+
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 
   // BRACKET PAIR COLORIZER 2
   "bracket-pair-colorizer-2.forceIterationColorCycle": true,
@@ -17,32 +44,39 @@
   "bracket-pair-colorizer-2.highlightActiveScope": true,
   "bracket-pair-colorizer-2.showVerticalScopeLine": true,
   "bracket-pair-colorizer-2.showHorizontalScopeLine": true,
+  "bracket-pair-colorizer-2.showBracketsInGutter": true,
+  "bracket-pair-colorizer-2.activeScopeCSS": [
+    "borderStyle : solid",
+    "borderWidth : 1px",
+    "borderColor : {color}",
+    "opacity: 0.5"
+  ],
   "bracket-pair-colorizer-2.colors": [
     // LIGHT THEME COLORS
     // -----------------
     "darkred",
-    "darkorange",
     "orangered",
     "darkkhaki",
     "darkgreen",
-    "blue",
-    "purple",
-    "deeppink",
+    "navy",
+    "indigo",
+    "palevioletred",
     "darkslategray",
-    "saddlebrown"
-
+    "brown"
     // DARK THEME COLOURS
     // ------------------
     // "lightsalmon",
     // "gold",
     // "peachpuff",
     // "chartreuse",
-    // "mediumslateblue",
     // "lightblue",
     // "thistle",
     // "fuchsia",
     // "pink",
     // "honeydew",
-    // "blanchedalmond"
+    // "blanchedalmond",
+    // "snow",
+    // "mistyrose"
   ]
 }
+// Note: VSCode user settings in /Users/<username>/Library/Application SUpport/COde/User/settings.json
