--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,18 @@
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 
   // BRACKET PAIR COLORIZER 2
   "bracket-pair-colorizer-2.forceIterationColorCycle": true,
@@ -54,29 +66,29 @@
   "bracket-pair-colorizer-2.colors": [
     // LIGHT THEME COLORS
     // -----------------
-    "darkred",
-    "orangered",
-    "darkkhaki",
-    "darkgreen",
-    "navy",
-    "indigo",
-    "palevioletred",
-    "darkslategray",
-    "brown"
+    // "darkred",
+    // "orangered",
+    // "darkkhaki",
+    // "darkgreen",
+    // "navy",
+    // "indigo",
+    // "palevioletred",
+    // "darkslategray",
+    // "brown"
     // DARK THEME COLOURS
     // ------------------
-    // "lightsalmon",
-    // "gold",
-    // "peachpuff",
-    // "chartreuse",
-    // "lightblue",
-    // "thistle",
-    // "fuchsia",
-    // "pink",
-    // "honeydew",
-    // "blanchedalmond",
-    // "snow",
-    // "mistyrose"
+    "lightsalmon",
+    "gold",
+    "peachpuff",
+    "chartreuse",
+    "lightblue",
+    "thistle",
+    "fuchsia",
+    "pink",
+    "honeydew",
+    "blanchedalmond",
+    "snow",
+    "mistyrose"
   ]
 }
 // Note: VSCode user settings in /Users/<username>/Library/Application SUpport/COde/User/settings.json
